Add a BigFont.DemoModule.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Readme/Todo.txt
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Readme/Todo.txt
@@ -8,6 +8,8 @@
 
 - Share theme in Orchard Gallery.
 - Share modules (x2) in Orchard gallery.
+- Categorize the modules
+- Categories the themes.
 
 # Nice to have
 
